# gpt

./: .env  pyproject.toml
gpt/: __main__.py
